--- a/index.html
+++ b/index.html
@@ -1,14 +1,81 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Christos Kopanidis</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Christos Kopanidis | IT Operator</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>first commit</h1>
-    <h2>Christos Kopanidis</h2>
-    <p>IT Professional, Specialist, Mastermind</p>
-    <p>Choco Owner</p>
+  <header>
+    <div class="container">
+      <img src="assets/profile.jpg" alt="Christos Kopanidis" class="profile-pic">
+      <h1>Christos Kopanidis</h1>
+      <h2>IT Operator @ Nexi</h2>
+      <p>Ensuring reliable IT operations, user support, and systems uptime.</p>
+    </div>
+  </header>
+
+  <section class="about container">
+    <h3>About</h3>
+    <p>
+        I am an IT professional with a strong passion for troubleshooting and system management. My expertise includes working with CISCO MERAKI, VM HORIZON, Office 365, Azure, and Active Directory, as well as utilizing ServiceNow to streamline IT operations efficiently.
+        What sets me apart is my team-oriented mindset and my determination to solve problems, no matter how challenging they may be. When I encounter an issue, I never give up—I continuously analyze, research, and explore all possible solutions until I find the right one. I believe that persistence, collaboration, and continuous learning are essential in the IT field.
+        Always eager to take on new challenges and grow within dynamic teams, I am committed to delivering effective and reliable IT solutions.
+    </p>
+  </section>
+
+  <section class="experience container">
+    <h3>Experience</h3>
+    <div class="job">
+      <h4>Information Technology Operator — Nexi Group</h4>
+      <p><em>June 2025 – Present</em></p>
+      <ul>
+        <li>Monitor and maintain infrastructure uptime and system performance.</li>
+        <li>Respond to user support tickets and IT incidents.</li>
+        <li>Assist in access management and system configuration.</li>
+        <li>Collaborate with internal teams to ensure IT service continuity.</li>
+      </ul>
+    </div>
+    <br>
+    <div class="job">
+      <h4>Help Desk Technician — Teleperformance</h4>
+      <p><em>November 2024 – June 2025</em></p>
+      <ul>
+        <li>Monitor and maintain infrastructure uptime and system performance.</li>
+        <li>Respond to user support tickets and IT incidents.</li>
+        <li>Assist in access management and system configuration.</li>
+        <li>Collaborate with internal teams to ensure IT service continuity.</li>
+      </ul>
+    </div>
+  </section>
+
+  <section class="skills container">
+    <h3>Technical Skills</h3>
+    <ul class="skills-list">
+        <li>Windows Server</li>
+        <li>Active Directory</li>
+        <li>VMware</li>
+        <li>Event Ticketing</li>
+        <li>Service Desk</li>
+    </ul>
+  </section>
+
+  <section class="education container">
+    <h3>Education</h3>
+    <p><strong>BSc in Informatics</strong><br>
+    University of Western Macedonia, Greece</p>
+    <br>
+    <p><strong>BSc in Computer Science & programming</strong><br>
+    SAEK AKMI, Greece</p>
+  </section>
+
+  <footer class="container">
+    <p>📧 <a href="mailto:xrhstoskopanidis@gmail.com">xrhstoskopanidis@gmail.com</a> |
+       <a href="https://linkedin.com/in/christoskopanidis" target="_blank">LinkedIn</a> |
+       <a href="https://github.com/christoskopanidis" target="_blank">GitHub</a>
+    </p>
+    <p class="copy">&copy; 2025 Christos Kopanidis</p>
+  </footer>
 </body>
 </html>
