updated Help Desk skills

--- a/index.html
+++ b/index.html
@@ -42,10 +42,12 @@
       <h4>Help Desk Technician — Teleperformance</h4>
       <p><em>November 2024 – June 2025</em></p>
       <ul>
-        <li>Monitor and maintain infrastructure uptime and system performance.</li>
-        <li>Respond to user support tickets and IT incidents.</li>
-        <li>Assist in access management and system configuration.</li>
-        <li>Collaborate with internal teams to ensure IT service continuity.</li>
+        <li>Technical support for departments via the ticketing system ServiceNow.</li>
+        <li>Device and main user management in Intune.</li>
+        <li>Managing PCs through Tanium (updates, vulnerabilities, app installation).</li>
+        <li>Troubleshooting issues in Cisco Meraki (cycle ports, VPN, speed testing, checking logs).</li>
+        <li>VMware troubleshooting</li>
+        <li>Microsoft Azure</li>
       </ul>
     </div>
   </section>
